<resources>
    <string name="app_name">Alpha Book Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard3_desc">Lorem ipsum dolor</string>
    <string name="onboard3_subDesc">Lorem ipsum dolor</string>
    <string name="image_illustration">Resume Image Illustration</string>
    <string name="get_started">Get Started</string>
    <string name="glad_to_see_you">Glad to See You</string>
    <string name="username">Username</string>
    <string name="sent_money_msg">$1 was sent to ALPHA</string>
    <string name="password">Password</string>
    <string name="next">next</string>
    <string name="sub_desc">READ <b>WITHOUT</b> LIMITS</string>
    <string name="desc">Welcome</string>
    <string name="mainFragment_illustration">Onboard Image Illustration</string>
    <string name="books">Books</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="card_author">Author</string>
    <string name="amount">Amount</string>
    <string name="send">send</string>
    <string name="book_title">Book Title</string>
    <string name="cart_icon">Shop cart icon</string>
    <string name="total_price">Total Price</string>
    <string name="logout">logout</string>
    <string name="add">add</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="book_image">Book Image</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="create_account">Don\'t have an account yet? <u>Sign Up</u></string>
    <string name="cancel">Cancel</string>
    <string name="alrdyAccount">Already have an account? <u>Log in</u></string>
    <string name="delete_item">Delete</string>
    <string name="BookTitle">Book Title</string>
    <string name="Author">Author</string>
    <string name="Pages">Page(s):</string>
    <string name="page_count">0</string>
    <string name="peso">₱</string>
    <string name="login">Login</string>
    <string name="by">by</string>
    <string name="price">100</string>
    <string name="acb_logout">Logout</string>
    <string name="cart_list">Cart list</string>
    <string name="acb_account">My Account</string>
    <string name="acb_profile">Profile</string>
    <string name="dum_amount">150</string>
    <string name="lbl_pay">Pay now</string>
    <string name="lbl_totalAmount">Total Amount:</string>
    <string name="lbl_checkOut">Checkout</string>
    <string name="prf_accountname">Juan Dela Cruz</string>
    <string name="prt_username">Juan Dela</string>
    <string name="lbl_prfname">Your Name</string>
    <string name="lbl_prfemail">Email</string>
    <string name="edt_dumname">Juan Dela Cruz</string>
    <string name="edt_dumemail">juandelacruz@gmail.com</string>
    <string name="lbl_prfusername">Username</string>
    <string name="btn_prfupdate">Update</string>
    <string name="btn_prfback">Back</string>
    <string name="edt_hntemail">Email</string>
    <string name="inp_hntemail">Email</string>
    <string name="inp_dummemail">juandelacruz@gmail.com</string>
    <string name="inp_prfusername">Username</string>
    <string name="inp_dummusername">Juan Dela</string>
    <string name="inp_prfname">Name</string>
    <string name="inp_dummname">Juan Dela Cruz</string>
    <string name="user_avatar">User Avatar</string>
</resources>