<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/acb_account"
        android:icon="@drawable/ic_account"
        android:title="@string/acb_account"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/acb_profile"
                android:title="@string/acb_profile" />
            
            <item
                android:id="@+id/acb_btnLogout"
                android:title="@string/acb_logout" />
        </menu>
    </item>

</menu>